#4 finalize code
